tests/ui/macros/unreachable.run.stderr
thread 'main' panicked at $DIR/unreachable.rs:6:5:
internal error: entered unreachable code
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
